Fix text positioning on safari

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -153,7 +153,7 @@
         pointer-events: none;
       }
 
-      .vzb-mc-title {
+      .vzb-mc-title text {
         dominant-baseline: hanging;
       }
 
